--- a/src/components/menuPosts/menuPosts.module.css
+++ b/src/components/menuPosts/menuPosts.module.css
@@ -1,93 +1,78 @@
-.container {
-    flex: 2;
-    margin-top: 60px;
-}
-
-.item {
-    display: flex;
-    align-items: center;
-    gap: 35px;
+.items {
     margin-top: 35px;
     margin-bottom: 60px;
-}
-
-.subtitle {
-    color: gray;
-    font-size: 16px;
-    font-weight: 400;
-}
-
-.title {
-    font-size: 28px;
-}
-
-.imageContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+  }
+  
+  .item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+  
+  .imageContainer {
     flex: 1;
-    position: relative;
     aspect-ratio: 1/1;
-}
-
-.image {
+    position: relative;
+  }
+  
+  .image {
     border-radius: 50%;
     border: 3px solid lightgray;
     object-fit: cover;
-}
-
-.textContainer {
+  }
+  
+  .textContainer {
     flex: 4;
     display: flex;
     flex-direction: column;
     gap: 5px;
-}
-
-.category {
+  }
+  
+  .category {
     padding: 3px 8px;
     border-radius: 10px;
     font-size: 12px;
     color: white;
     width: max-content;
-}
-
-.category.travel {
+  }
+  
+  .category.travel {
     background-color: #ff7857;
-}
-
-.culture {
+  }
+  
+  .culture {
     background-color: #ffb14f;
-}
-
-.food {
+  }
+  
+  .food {
     background-color: #7fb881;
-}
-
-.fashion {
+  }
+  
+  .fashion {
     background-color: #ff7887;
-}
-
-.coding {
+  }
+  
+  .coding {
     background-color: #775aec;
-}
-
-.style {
+  }
+  
+  .style {
     background-color: #789cff;
-}
-
-.postTitle {
+  }
+  
+  .postTitle {
     font-size: 18px;
     font-weight: 500;
     color: var(--softTextColor);
-}
-
-.detail {
-    font-size: 12;
-}
-
-.date {
+  }
+  
+  .detail {
+    font-size: 12px;
+  }
+  
+  .date {
     color: gray;
-}
-
-@media screen and (max-width: 1024px) {
-    .container {
-        display: none;
-    }
-}
+  }
